test/depConsume3.slq
def main(){
	x:=H(0:ğ”¹);
	x:=((x:ğ”¹)qfreeâ‡’x)(x); /// error
	__show(__query("dep", x)); // âŠ¤
}
